Added Pagination for Notification Templates